# glog_demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fetch.sh  mk.sh  push.sh
src/: a.h  log.h  main.cpp
